@@ -44,7 +44,7 @@ public:
 
     void addSelectionToPlaylist(const QString &name=QString(), bool replace=false, quint8 priorty=0, bool randomAlbums=false);
     void setView(int v) { view->setMode((ItemView::Mode)v); searchView->setMode((ItemView::Mode)v); }
-    void focusSearch() { view->focusSearch(); searchView->focusSearch(); }
+    void focusSearch();
     void goBack() { itemView()->backActivated(); }
     ItemView *itemView() { return searching ? searchView : view; }
     void showEvent(QShowEvent *e);
