@@ -46,7 +46,7 @@ public:
     QList<Song> selectedSongs(bool allowPlaylists=false) const;
     void addSelectionToPlaylist(const QString &name=QString(), bool replace=false, quint8 priorty=0);
     void setView(int v) { view->setMode((ItemView::Mode)v); }
-    void focusSearch() { view->focusSearch(); }
+    void focusSearch();
     void refresh();
     void showEvent(QShowEvent *e);
     void resort() { proxy.resort(); }
